Cambio de estrutura logo

--- a/visual virtual/View/servicios.html
+++ b/visual virtual/View/servicios.html
@@ -17,8 +17,8 @@
             <a href="index.html" class="logo-container">
                 <img src="../Controller/imagenes/logo.png" alt="Logo LEXIM" class="logo">
                 <div class="logo-text">
-                    <strong>Corporación Centro de Conciliación,</strong><br>
-                    Mediación y Consultoría Lex Impartialis
+                    <strong>Centro de Conciliación</strong><br>
+                    Y Consultoría Lex Impartialis
                 </div>
             </a>
             <nav class="main-nav">
