--- a/visual virtual/View/servicios.html
+++ b/visual virtual/View/servicios.html
@@ -24,8 +24,8 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="quienes-somos.html" class="active">Quiénes Somos</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="quienes-somos.html">Quiénes Somos</a></li>
+                    <li><a href="servicios.html" class="active">Servicios</a></li>
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
