--- a/visual virtual/View/quienes-somos.html
+++ b/visual virtual/View/quienes-somos.html
@@ -94,7 +94,7 @@
 
     <!-- ===== FOOTER ===== --> 
    <footer class="main-footer">
-    <div class="container">
+        <div class="container">
             
             <!-- El contenedor principal que aplica el Flexbox -->
             <div class="footer-content">
@@ -109,11 +109,14 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <span>corporacioncorlex@gmail.com</span>
+                            <span>Centrodeconciliacionlexim@gmail.com</span>
                         </li>
                         <li>
                             <i class="fab fa-whatsapp"></i>
-                            <span>(+57) 322 869 8297 / (+57) 322 815 1985</span>
+                            <span class="phones">
+                                <span>(+57) 322 869 8297 / (+57) 322 815 1985</span>
+                                <span>(+57) 313 583 5675</span>
+                            </span>
                         </li>
                     </ul>
                 </div>
@@ -128,6 +131,11 @@
                         <li>
                             <a href="https://www.instagram.com/lexim_col?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         </li>
+                        <li>
+                            <a href="https://wa.me/573228698297" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.tiktok.com/@centro.conciliaci5?is_from_webapp=1&sender_device=pc" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
                     </ul>
                 </div>
                 
