--- a/visual virtual/Controller/styles/servicios.css
+++ b/visual virtual/Controller/styles/servicios.css
@@ -20,7 +20,7 @@
     content: '';
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
-
+    background-image: url('../imagenes/blurry-gradient-bg.svg');
     background-size: cover;
     background-position: center;
     opacity: 0.15; /* Hacemos el fondo muy sutil */
