habilitado seccion de servicios y anexada pimera seccion de información publica

--- a/visual virtual/Controller/styles/inicio.css
+++ b/visual virtual/Controller/styles/inicio.css
@@ -466,7 +466,7 @@ body {
     margin-right: 12px;
 }
 
-/* Teléfonos del footer en líneas, manteniendo el layout con el ícono */
+/* Teléfonos del footer en líneas, manteniendo el con el ícono */
 .contact-info li .phones span{
   display: block;
   white-space: nowrap;
