--- a/visual virtual/View/quienes-somos.html
+++ b/visual virtual/View/quienes-somos.html
@@ -23,7 +23,7 @@
                 <img src="../Controller/imagenes/logo.png" alt="Logo LEXIM" class="logo">
                 <div class="logo-text">
                     <strong>Centro de Conciliación</strong><br>
-                    Y Consultoría Lex Impartialis
+                    Arbitraje y Consultoría Lex Impartialis
                 </div>
             </a>
             <nav class="main-nav">
