--- a/visual virtual/Controller/styles/quienes-somos.css
+++ b/visual virtual/Controller/styles/quienes-somos.css
@@ -66,7 +66,7 @@
 .value-card:hover {
     background: rgba(255, 255, 255, 0.7);
     transform: translateY(-10px) scale(1.02) !important;
-    box-shadow: 0 15px 40px 0 rgba(26, 44, 141, 0.432);
+    box-shadow: 0 5px 30px rgba(10, 53, 86, 0.517);
 }
 
 .value-icon {
